# Chesstest

./: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
data/: figRes.xml  res.xml
src/: enums.h  example1.cpp  figure.cpp  figure.h  game.cpp  game.h  main.cpp  res.cpp  res.h
